<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/contact_card"
    android:background="@color/back_blue"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchorGravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/card_details">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/cards">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/slivergray"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@color/White">
                        <RelativeLayout
                            android:id="@+id/header"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@color/tabs1"
                            android:gravity="center">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:layout_centerHorizontal="true"
                                android:textAllCaps="true"
                                android:paddingTop="10dp"
                                android:textStyle="bold"
                                android:text="@string/ded_charge"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:textColor="@color/White"
                                android:textSize="16sp"/>
                            <Button
                                android:id="@+id/close"
                                style="@style/Base.Widget.AppCompat.Button.Borderless"
                                android:layout_width="36dp"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentTop="true"
                                android:drawableTint="@color/White"
                                android:drawableLeft="@drawable/ic_close_black_24dp"
                                android:textColor="@color/gray"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                        </RelativeLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="4"
                            android:id="@+id/settaxs"
                            android:layout_marginTop="10dp"
                            android:layout_below="@+id/header">
                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2">

                                <TextView
                                    android:id="@+id/set_tax"
                                    android:layout_width="match_parent"
                                    android:inputType="text"
                                    android:textSize="16dp"
                                    android:textColorHint="@color/tabs"
                                    android:layout_height="wrap_content"
                                    android:text="Deducted Taxes " />
                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="4"
                            android:id="@+id/tax"
                            android:layout_marginTop="10dp"
                            android:layout_below="@+id/settaxs">
                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/taxs"
                                    android:layout_width="match_parent"
                                    android:inputType="text"
                                    android:textSize="16dp"
                                    android:textColorHint="@color/tabs"
                                    android:layout_height="wrap_content" />
                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/btnLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="40dp"
                            android:layout_below="@+id/tax"
                            android:weightSum="4">
                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColorHint="@color/White"

                                android:orientation="horizontal">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:layout_margin="10dp"
                                    android:layout_marginBottom="70dp">
                                    <androidx.appcompat.widget.AppCompatButton
                                        android:id="@+id/cancel"
                                        android:layout_width="10dp"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="left"
                                        android:layout_weight="2"
                                        android:background="@drawable/button_background"
                                        android:gravity="center"
                                        android:text="@string/cancel"
                                        android:textColor="@android:color/white"
                                        android:textSize="16sp" />

                                    <View
                                        android:layout_width="41dp"
                                        android:layout_height="fill_parent"
                                        android:backgroundTint="@color/back_blue"
                                        android:background="@color/White" />

                                    <androidx.appcompat.widget.AppCompatButton
                                        android:id="@+id/save"
                                        android:layout_width="10dp"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:layout_weight="2"
                                        android:background="@drawable/button_background"
                                        android:gravity="center"
                                        android:text="@string/save"
                                        android:textColor="@android:color/white"
                                        android:textSize="16sp" />
                                </LinearLayout>
                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>



        </LinearLayout>


    </FrameLayout>


</RelativeLayout>
